--- a/react-flux/package.json
+++ b/react-flux/package.json
@@ -9,6 +9,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-polyfill": "^6.7.4",
@@ -36,6 +37,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-webpack": "^1.5.0",
     "history": "^4.6.1",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
